--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,5 +27,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+
       - name: Run tests
-        run: npm run test
+        run: npm test
