--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,10 +25,17 @@ jobs:
             ${{ runner.os }}-node_modules-
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Install Playwright browsers
-        run: npx playwright install
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
       - name: Run tests
-        run: npm test
+        run: npx playwright test
+
+      - name: Upload Playwright Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
